# image_binarization

./: .gitignore  CMakeLists.txt  README.md
img/: test_picts.sh
include/: binarization_basic.hpp  gray.hpp  kittler.hpp  omp_config.hpp  otsu.hpp  unbalanced_otsu.hpp
play/: CMakeLists.txt  main.cpp
src/: binarization_basics.cpp  gray.cpp  kittler.cpp  otsu.cpp  unbalanced_otsu.cpp
